# Trade-Analyzer-

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  breakaway_gap_scan.py  package.json  pyproject.toml  railway.toml  requirements.txt  server.js  setup_morning_alert.ps1  setup_scheduled_alert.ps1  watchlist.txt
patches/: add_absolute_strength.py  add_as_alerts.py  add_as_monitor.py  add_backtester.py  add_cli_runner.py  add_comparative_strength.py  add_composite_event.py  add_dashboard.py  add_gap_fill_risk.py  add_linear_regime.py  add_linear_tracker.py  add_master_dashboard.py  add_master_matrix.py  add_master_score.py  add_post_earnings_flag.py  add_rank_change_alerts.py  add_stage_enriched.py  add_theme_momentum.py  add_ticker_dashboard.py  add_unified_scanner.py  alerts.py  iv_provider.py  options_overlay.py
public/: index.html
trade_analyzer/: __init__.py  cli.py
