[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-analyzer"
version = "1.0.0"
description = "APEX Trade Event Scanner — gap detection, Weinstein stage classification, options overlay, and multi-dimensional signal ranking"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "scipy>=1.12.0",
    "kaleido>=0.2.1",
    "lxml>=5.1.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
trade-analyzer = "trade_analyzer.cli:main"

[project.optional-dependencies]
alerts = ["requests>=2.31.0"]

[tool.setuptools.packages.find]
include = ["trade_analyzer*", "patches*"]

[tool.setuptools.package-data]
"*" = ["*.txt"]
